修复修改密码的文档，增加获取所有entity的功能
