# src/main/resources/static/api.yaml
@@ -30,20 +30,7 @@ tags:
 schemes:
 - "http"
 paths:
-  /oauth2/token:
-    post:
-      tags:
-      - "认证"
-      summary: "登录"
-      parameters:
-      - name: "body"
-        in: "body"
-        schema:
-          $ref: "#/definitions/Oauth"
-      responses:
-        "200":
-          description: "成功"
-  /oauth2/password:
+  /oauth/password:
     post:
       tags:
       - "认证"
